[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/m5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 102
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 102
font_data = ExtResource( 2 )

[node name="PauseBox" type="VBoxContainer"]
pause_mode = 2
margin_right = 244.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 34
alignment = 1
script = ExtResource( 1 )

[node name="PauseLabel" type="Label" parent="."]
margin_right = 387.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Pause Menu"
align = 1

[node name="ContinueButton" type="Button" parent="."]
margin_top = 115.0
margin_right = 387.0
margin_bottom = 202.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="MainMenuButton" type="Button" parent="."]
margin_top = 236.0
margin_right = 387.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="QuitGameButton" type="Button" parent="."]
margin_top = 357.0
margin_right = 387.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Quit Game"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
